--- a/musico.html
+++ b/musico.html
@@ -414,12 +414,14 @@ when the code has everything copied, it will look like this. if you’re having 
                 </div>
                 <div id="player-content">
                     <div id="album-art">
+
+                        <a href="https://imgur.com/WWucm6d"><img src="https://i.imgur.com/WWucm6d.png" title="source: imgur.com" /></a>
                   
-                        <img src="https://imgur.com/UQYjMMp"><img src="https://i.imgur.com/UQYjMMp.jpg" class="active" id="_1">
-                        <img src="https://imgur.com/UQYjMMp"><img src="https://i.imgur.com/UQYjMMp.jpg" id="_2">
-                        <img src="https://imgur.com/UQYjMMp"><img src="https://i.imgur.com/UQYjMMp.jpg" id="_3">
-                        <img src="https://imgur.com/UQYjMMp"><img src="https://i.imgur.com/UQYjMMp.jpg" id="_4">
-                        <img src="https://imgur.com/UQYjMMp"><img src="https://i.imgur.com/UQYjMMp.jpg" id="_5">
+                        <img src="https://i.imgur.com/WWucm6d.png" class="active" id="_1">
+                        <img src="https://i.imgur.com/WWucm6d.png" id="_2">
+                        <img src="https://i.imgur.com/WWucm6d.png" id="_3">
+                        <img src="https://i.imgur.com/WWucm6d.png" id="_4">
+                        <img src="https://i.imgur.com/WWucm6d.png" id="_5">
                         <div id="buffer-box">Buffering ...</div>
                     </div>
                     <div id="player-controls">
