--- a/musico.html
+++ b/musico.html
@@ -39,9 +39,9 @@ when the code has everything copied, it will look like this. if you’re having 
     
     body
     {
-        font-family: Helvetica, Arial;
+        font-family: Roboto Mono, Cutive Mono;
         margin: 0;
-        background-color: #ffeff5;
+        background-color: #FFF786;
     }
     
     #app-cover
